--- a/style.css
+++ b/style.css
@@ -3,13 +3,17 @@
 }
 
 .desc {
-    color: #6e5500;
-    font-size: 0.8rem;
+    color: #31689f;
+    font-size: 0.95rem;
+}
+
+.terminology{
+    font-size: 0.95rem;
 }
 
 .card {
     margin: 20px auto;
-    max-width: 500px;
+    max-width: 600px;
 }
 
 .title {
@@ -29,4 +33,24 @@
         font-size: 1.1rem;
         font-weight: bold;
     }
+}
+
+.card-header {
+    font-weight: bold;
+}
+
+.cof-dell{
+    /*background: rgba(243, 225, 134, 0.67);*/
+    font-weight: bold;
+    font-size: 1.1rem;
+    padding: 10px 0 5px;
+    border-radius: 7px;
+    text-align: center;
+}
+.m-b-10{
+    margin-bottom: 10px;
+}
+
+.m-b-5{
+    margin-bottom: 10px;
 }
